<resources>
    <string name="app_name">UtkuMSG9000</string>
    <string name="messaging_title_alpha">Messager Alpha 0.1</string>
    <string name="enter_message_hint">Enter Message Here</string>
    <string name="debug_signout_button">Debug_Signout</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="test_activity">test act</string>
    <string name="msg_area">Messaging Area</string>
    <string name="reset_button">Reset Log</string>
    <string name="title_string">UtkuMSG9000</string>
    <string name="mo_button_string">Mo Click Here</string>
</resources>
