<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.utku.messagingapp.MainActivity">

    <!-- Displays version of app -->
    <TextView
        android:id="@+id/version_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.5"
        android:text="@string/messaging_title_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/msg_area_button"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="msgArea"
        android:text="@string/msg_area"
        android:padding="2dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/version_indicator"
        android:layout_alignEnd="@+id/version_indicator" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:onClick="resetLifecycleDisplay"
        android:text="@string/reset_button"
        android:layout_above="@+id/scrollView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button2" />

    <Button
        android:id="@+id/mo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/mo_button_string"
        android:background="@color/cardview_dark_background"
        android:onClick="moButton" />

    <ScrollView
        android:layout_width="100dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/scrollView2">

        <TextView
            android:id="@+id/tv_lifecycle_events_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp" />
    </ScrollView>

    <TextView
        android:id="@+id/title_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/version_indicator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/version_indicator"
        android:layout_alignTop="@+id/button2"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textAppearance="@anim/slide_in_right"/>

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button2"
        app:srcCompat="@drawable/title_fire" />

</RelativeLayout>
