<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.utku.messagingapp.MessagingActivity">

    <!-- Displays version of app -->
    <TextView
        android:id="@+id/version_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.5"
        android:text="@string/messaging_title_alpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <!-- Send message button -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/send_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:src="@drawable/com_facebook_button_icon_blue"
        android:tint="@android:drawable/screen_background_dark"
        app:backgroundTint="@android:color/holo_orange_light" />

    <!-- Input area for message -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/send_msg"
        android:layout_toStartOf="@+id/send_msg">

    </android.support.design.widget.TextInputLayout>

    <!-- Message display -->
    <ListView
        android:id="@+id/list_of_messages"
        style="@style/Widget.AppCompat.Light.ListView.DropDown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="16dp"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/debug_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="debug_SignOut"
        android:text="@string/debug_signout_button"
        android:layout_above="@+id/loading_messages_indicator"
        android:layout_alignRight="@+id/version_indicator"
        android:layout_alignEnd="@+id/version_indicator"
        android:layout_marginBottom="27dp" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/send_msg"
        android:layout_weight="1"
        android:background="@color/com_facebook_button_border_color_focused"
        android:elevation="0dp"
        android:hint="@string/enter_message_hint"
        android:inputType="text" />

    <ProgressBar
        android:id="@+id/loading_messages_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/attach_file_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:drawable/ic_menu_upload"
        android:onClick="attachFile"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_alignBaseline="@+id/text_input"
        android:layout_alignBottom="@+id/text_input"
        android:layout_toRightOf="@+id/debug_sign_out"
        android:layout_toEndOf="@+id/debug_sign_out" />

</RelativeLayout>
